# ETL_Reddit

./: .gitignore  README.md  main.py  pyproject.toml
output/: extracted.csv  transformed.csv
util/: extract.py  load.py  transform.py
